--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <script>
         var btn = document.querySelector("button");
         btn.onclick = function(){
-            alert("Hello Word!!");
+            window.location.href="https://zhangkexinl.github.io/myhtml/divmove.html/";
+            // window.location.href=".//divmove.html"
+            // window.open(".//divmove.html");
         }
     </script>
 </body>
